# internal/handlers/page_handler.go
@@ -11,7 +11,9 @@ import (
 )
 
 type CreatePageRequest struct {
-	Title string `json:"title"`
+	Title    string `json:"title"`
+	Icon     string `json:"icon"`
+	ParentId string `json:"parentId"`
 }
 
 type SavePageRequest struct {
@@ -50,7 +52,7 @@ func (h *Handler) CreatePageHandler(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	page, err := h.db.CreatePage(r.Context(), newID(), req.Title)
+	page, err := h.db.CreatePage(r.Context(), newID(), req.Title, req.Icon, req.ParentId)
 	if err != nil {
 		writeJSON(w, http.StatusInternalServerError, map[string]string{"error": "database error"})
 		return
@@ -86,7 +88,7 @@ func (h *Handler) SavePageHandler(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	newVersion, err := h.db.SavePage(r.Context(), id, req.Title, req.Content, req.Version)
+	newVersion, err := h.db.SavePage(r.Context(), id, req.Title, req.Content)
 	if err != nil {
 		writeJSON(w, http.StatusNotFound, map[string]string{"error": "page not found"})
 		return
@@ -125,3 +127,95 @@ func (h *Handler) GetPageBacklinksHandler(w http.ResponseWriter, r *http.Request
 	}
 	writeJSON(w, http.StatusOK, backlinks)
 }
+
+func (h *Handler) GetPageChildrenHandler(w http.ResponseWriter, r *http.Request) {
+	id := chi.URLParam(r, "id")
+	if id == "" {
+		writeJSON(w, http.StatusBadRequest, map[string]string{"error": "invalid id"})
+		return
+	}
+
+	childrens, err := h.db.GetPageChildren(r.Context(), id)
+	if err != nil {
+		writeJSON(w, http.StatusNotFound, map[string]string{"error": "page not found"})
+		return
+	}
+
+	writeJSON(w, http.StatusOK, childrens)
+}
+
+func (h *Handler) GetPageVersionsHandler(w http.ResponseWriter, r *http.Request) {
+	id := chi.URLParam(r, "id")
+	if id == "" {
+		writeJSON(w, http.StatusBadRequest, map[string]string{"error": "invalid id"})
+		return
+	}
+
+	versions, err := h.db.GetPageVersions(r.Context(), id)
+	if err != nil {
+		writeJSON(w, http.StatusNotFound, map[string]string{"error": "page not found"})
+		return
+	}
+
+	writeJSON(w, http.StatusOK, versions)
+}
+
+func (h *Handler) GetPageVersionHandler(w http.ResponseWriter, r *http.Request) {
+	id := chi.URLParam(r, "id")
+	if id == "" {
+		writeJSON(w, http.StatusBadRequest, map[string]string{"error": "invalid id"})
+		return
+	}
+
+	version := chi.URLParam(r, "version")
+	if version == "" {
+		writeJSON(w, http.StatusBadRequest, map[string]string{"error": "invalid version"})
+		return
+	}
+
+	page, err := h.db.GetPageVersion(r.Context(), id, version)
+	if err != nil {
+		writeJSON(w, http.StatusNotFound, map[string]string{"error": "page not found"})
+		return
+	}
+
+	writeJSON(w, http.StatusOK, page)
+}
+
+func (h *Handler) RestorePageVersionHandler(w http.ResponseWriter, r *http.Request) {
+	id := chi.URLParam(r, "id")
+	if id == "" {
+		writeJSON(w, http.StatusBadRequest, map[string]string{"error": "invalid id"})
+		return
+	}
+
+	version := chi.URLParam(r, "version")
+	if version == "" {
+		writeJSON(w, http.StatusBadRequest, map[string]string{"error": "invalid version"})
+		return
+	}
+
+	err := h.db.RestorePage(r.Context(), id, version)
+	if err != nil {
+		writeJSON(w, http.StatusNotFound, map[string]string{"error": "can not restore the page"})
+		return
+	}
+
+	writeJSON(w, http.StatusOK, nil)
+}
+
+//func (h *Handler) GetCommentsHandler(w http.ResponseWriter, r *http.Request) {
+//	id := chi.URLParam(r, "id")
+//	if id == "" {
+//		writeJSON(w, http.StatusBadRequest, map[string]string{"error": "invalid id"})
+//		return
+//	}
+//
+//	comments, err := h.db.GetCommentsHandler(r.Context(), id)
+//	if err != nil {
+//		writeJSON(w, http.StatusNotFound, map[string]string{"error": "comment not found"})
+//		return
+//	}
+//
+//	writeJSON(w, http.StatusOK, comments)
+//}
